<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ex05_behavior_trees</name>
  <version>0.0.0</version>
  <description>Behavior trees</description>
  <author email="amock@uos.de">Alexander Mock</author>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ex04_msgs</depend>
  <depend>ex05_bt_plugins</depend>
  <depend>behaviortree_cpp_v3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
